--- a/FinalTask/front/aitools.html
+++ b/FinalTask/front/aitools.html
@@ -1,36 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>AI Tools</title>
-</head>
+<html>
+<head></head>
 <body>
   <h2>AI Tools Catalog</h2>
   <table border="1">
     <thead>
       <tr>
         <th>Name</th>
-        <th>Year Published</th>
-        <th>Cost (USD/month)</th>
-        <th>Avg. Monthly Users</th>
+        <th>Year</th>
+        <th>Cost</th>
+        <th>Avg</th>
       </tr>
     </thead>
     <tbody id="tools-body"></tbody>
   </table>
 
   <script>
-    async function loadTools() {
+    function loadTools() {
       const token = localStorage.getItem("token");
-      const res = await fetch("/ai-tools", {
-        headers: { Authorization: `Bearer ${token}` },
+      const res = fetch("/ai-tools", {
+        headers: { Authorization: `${token}` },
       });
-
       if (!res.ok) {
-        alert("Unauthorized or error fetching tools.");
+        console.log("error fetch");
         return;
       }
-
-      const tools = await res.json();
+      const tools = res.json();
       const tbody = document.getElementById("tools-body");
       tools.forEach(tool => {
         const row = `<tr>
