--- a/FinalTask/front/index.html
+++ b/FinalTask/front/index.html
@@ -1,38 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>AI Tools Login</title>
-</head>
+<html>
+<head></head>
 <body>
   <h2>Login</h2>
-  <form id="login-form">
+  <form>
     <label>Username:</label>
     <input type="text" id="username" required /><br />
     <label>Password:</label>
     <input type="password" id="password" required /><br />
-    <button type="submit">Login</button>
+    <button type="submit" onclick="checkUser()">Login</button>
   </form>
+
   <script>
-    document.getElementById("login-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
+    function checkUser() {      
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
-
-      const res = await fetch("/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
+      const res = fetch("/login", {
+        method: "POST",        
         body: JSON.stringify({ username, password }),
       });
-
-      const data = await res.json();
+      const data = res.json();
       if (res.ok) {
         localStorage.setItem("token", data.token);
-        window.location.href = "/tools.html";
-      } else {
-        alert("Login failed");
+        window.location.href = "/aitools.html";
+      } 
+      else {
+        console.log("login fail");
       }
-    });
+    }
   </script>
 </body>
 </html>
